# exmado

./: .env.example  .gitignore  CLAUDE_GUIDE.MD  README.md  docker-compose.yml  nginx.conf
backend/: .env.example  Dockerfile  README.md  celery_worker.py  docker-compose.yml  pyproject.toml  requirements.txt  start_worker.sh  test_api.py  test_services.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py
backend/app/api/: __init__.py  deps.py  docuware.py  excel.py  jobs.py  websocket.py
backend/app/models/: __init__.py  job.py  job_log.py  job_record.py
backend/app/schemas/: __init__.py  job.py
backend/app/services/: __init__.py  docuware_client.py  excel_parser.py  file_transformer.py  folder_organizer.py
backend/app/tasks/: __init__.py  download_task.py
backend/docs/: API.md  CELERY.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CreateJobWizard.tsx  JobDetails.tsx  JobsList.tsx  Stubs.tsx
frontend/src/hooks/: useJobProgress.ts
frontend/src/hooks/api/: docuware.ts  index.ts  jobs.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: snackbar.ts
