[tool.poetry]
name = "exmado-backend"
version = "0.1.0"
description = "Backend service for the Exmado web scraping platform."
authors = ["Luis Oseguera <loseguera@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
celery = "^5.4.0"
redis = "^5.0.4"
sqlalchemy = "^2.0.30"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pydantic = {extras = ["email"], version = "^2.7.1"}
SQLAlchemy-Utils = "^0.41.2"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"
pydantic-settings = "^2.3.4"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
img2pdf = "^0.5.1"
Pillow = "^10.4.0"
python-docx = "^1.1.2"
PyPDF2 = "^3.0.1"


[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # a known issue with FastAPI's Depends
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["app"]
